# nix-browse

./: Cargo.toml  default.nix  gen-default.nix.sh  nix-browse.cabal
src/: build_deriv.rs  main.rs  parse_nix_instantiate.rs
