[package]
name = "nix-browse"
version = "0.1.0"
authors = ["Allen Nelson <ithinkican@github.com>"]

[dependencies]
# chrono = "0.3"
clap = "2.20.5"
regex = "*"
lazy_static = "0.2"
unescape = "*"
serde_json = "*"
#rocket = "0.2.2"
# rocket_codegen = "0.2.2"
# rusqlite = "0.10.1"
serde = "0.9"
serde_derive = "0.9"
# serde_json = "0.9"

# [dependencies.rocket_contrib]
# version = "0.2.2"
# default-features = false
# features = ["handlebars_templates", "tera_templates"]

# [dev-dependencies]
# mktemp = "0.3.1"

[[bin]]
name = "nix-browse"
path = "src/main.rs"